samples/_failures_safe/1761315293_8fec0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c4e644d.c: In function ‘main’:
./samples/SAFE/__tmp_4c4e644d.c:149:13: error: expected declaration or statement at end of input
  149 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_4c4e644d.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4c4e644d.c:149:13: error: expected declaration or statement at end of input
